crates/ridge-parser/tests/fixtures/errors/p019_orphan_doc_no_items.ridge
-- expect: P019
-- Trigger: doc comment after a fn with no following declaration.
fn a x = x
fn b y = y
---
trailing orphan doc comment
---
